--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="paragraf">
     <p>there are people from Asia</p>
     </div>
-    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="></a>
+    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
     <div class="container">
     <div class="img1">
     <img title="SAMUEL SLINE😛" src="z.jpg
@@ -106,4 +106,5 @@
         }
     </script>
 </body>
+
 </html>
