--- a/index.html
+++ b/index.html
@@ -74,17 +74,15 @@
     <div class="paragraf">
     <p>there are people from Asia</p>
     </div>
-    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
     <div class="container">
     <div class="img1">
-    <img title="SAMUEL SLINE😛" src="z.jpg
-    " alt="samuelganteng">
+    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img title="SAMUEL SLINE😛" src="z.jpg
+    " alt="samuelganteng"></a>
     </div>
     <div class="img2">
-    <img title="IHH GANTENG BANGET😘" src="q.jpg" alt="ehsamuellagi">
+    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img title="IHH GANTENG BANGET😘" src="q.jpg" alt="ehsamuellagi"></a>
     </div>
     </div>
-    </a>
     <div class="music">
     <p style="cursor: pointer;" id="iconSong">CLICK FOR SONG</p>
     </div>
@@ -108,3 +106,4 @@
 </body>
 
 </html>
+
