--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="container">
     <div class="img1">
-    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img title="SAMUEL SLINE😛" src="z.jpg
+    <a href="https://youtu.be/dQw4w9WgXcQ?si=GHNmrau2bRUTyDXZ"><img title="SAMUEL SLINE😛" src="z.jpg
     " alt="samuelganteng"></a>
     </div>
     <div class="img2">
@@ -106,4 +106,5 @@
 </body>
 
 </html>
+
 
