--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="container">
     <div class="img1">
-    <a href="https://vioo.cc/v/3QmF"><img title="SAMUEL SLINE😛" src="z.jpg
+    <a href="https://www.instagram.com/p/DDjkm1Lz7G2/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="><img title="SAMUEL SLINE😛" src="z.jpg
     " alt="samuelganteng"></a>
     </div>
     <div class="img2">
@@ -106,6 +106,7 @@
 </body>
 
 </html>
+
 
 
 
