--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
     </div>
     </div>
     <div class="music">
+        <a style="color: rgb(107, 102, 102);" href="https://www.instagram.com/p/DDjkm1Lz7G2/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
     <p style="cursor: pointer;" id="iconSong">CLICK FOR SONG</p>
+        </a>
     </div>
-    <audio id="Song" loop>
+
+</body>
+
+</html>
+   <!-- <audio id="Song" loop>
         <source src="still.mp3" type="audio/mp3"/>
     </audio>
     <script>
@@ -103,9 +109,7 @@
             }
         }
     </script>
-</body>
 
-</html>
 
 
 
