--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </div>
     <div class="container">
     <div class="img1">
-    <a href="https://www.instagram.com/p/DDjkm1Lz7G2/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="><img title="SAMUEL SLINE😛" src="z.jpg
-    " alt="samuelganteng"></a>
+    <img title="SAMUEL SLINE😛" src="z.jpg
+    " alt="samuelganteng">
     </div>
     <div class="img2">
-    <a href="https://www.instagram.com/bay.jeonjjk?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img title="IHH GANTENG BANGET😘" src="q.jpg" alt="ehsamuellagi"></a>
+    <img title="IHH GANTENG BANGET😘" src="q.jpg" alt="ehsamuellagi">
     </div>
     </div>
     <div class="music">
@@ -109,6 +109,7 @@
             }
         }
     </script>
+
 
 
 
